# llama_engine

./: .gitignores  CMakeLists.txt  Dockerfile  README.md  docker_run.sh  llama2.cpp  llama3.cpp  main.cpp  python_test_llama2.py  python_test_llama3.py  reference.cpp  reference.hpp
.github/workflows/: pr-test.yml
cmake/: cuda_build.cmake
include/: config.hpp  decoder.hpp  dtypes.h  dtypes.hpp  encoder.hpp  llama.hpp  op.hpp  op_cpu.hpp  op_cuda.cu  op_cuda.hpp  opset.hpp  opset_cpu.hpp  opset_cuda.hpp  rng.hpp  run_state.hpp  sampler.hpp  template.hpp  tensor.hpp  tokenizer.hpp  tracer.hpp  transformer.hpp  weights.hpp
include/device/: device.hpp  device_base.hpp  device_cpu.hpp  device_cuda.hpp
include/device/malloc/: malloc.hpp  malloc_abc.hpp  malloc_base.hpp  malloc_cpu.hpp  malloc_cuda.hpp  memory_buffer_base.hpp  memory_buffer_cpu.hpp  memory_buffer_cuda.hpp
include/device/memcpy/: memcpy.hpp  memcpy_base.hpp  memcpy_cpu.hpp  memcpy_cuda.hpp
include/malloc/: malloc.hpp  malloc_abc.hpp  malloc_cpu.hpp
references/: reference_llama2.cpp  reference_llama3.cpp
src/: config.cpp  llama_python.cpp  template.cpp  transformer.cpp  weights.cpp
tests/: CMakeLists.txt  encode_test.cpp  forward_test.cpp  generate_test.cpp  loader_test.cpp  op_argmax_test.cpp  op_attention_test.cpp  op_ewadd_test.cpp  op_mm_test.cpp  op_rmsnorm_test.cpp  op_rope_test.cpp  op_softmax_test.cpp  op_test.cpp  sampler_test.cpp  test_utility.hpp  tokenizer_test.cpp
tests/cuda/: cuda_allocator_test.cpp  cuda_forward_test.cpp  cuda_generate_test.cpp  cuda_op_attention_test.cpp  cuda_op_ewadd_test.cpp  cuda_op_mm_test.cpp  cuda_op_rmsnorm_test.cpp  cuda_op_rope_test.cpp
